--- a/correction_tutorat_sport.html
+++ b/correction_tutorat_sport.html
@@ -5335,7 +5335,7 @@ window.document.addEventListener("DOMContentLoaded", function (event) {
 </script>
 </div> <!-- /content -->
 <script>
-  const password = "biostat2025"; 
+  const password = "tutorat12nov"; 
   const userPassword = prompt("Veuillez entrer le mot de passe pour accéder à cette page :");
   if (userPassword !== password) {
     alert("Mot de passe incorrect !");
@@ -5345,3 +5345,4 @@ window.document.addEventListener("DOMContentLoaded", function (event) {
 
 
 </body></html>
+
