--- a/correction_tutorat_sport.html
+++ b/correction_tutorat_sport.html
@@ -8,7 +8,7 @@
 
 <meta name="author" content="Tuteurs R">
 
-<title>Correction_tutorat_sport</title>
+<title>Correction tutorat sport</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -5325,16 +5325,15 @@ window.document.addEventListener("DOMContentLoaded", function (event) {
 });
 </script>
 </div> <!-- /content -->
-
 <script>
   const password = "tutorat12nov"; 
-  const userPassword = prompt("Veuillez entrer le mot de passe pour accéder à cette page :");
+  const userPassword = prompt("Veuillez entrer le mot de passe pour accéder à cette super page :");
   if (userPassword !== password) {
     alert("Mot de passe incorrect !");
     window.location.href = "https://www.google.com"; // ou une autre page
   }
 </script>
 
-
 </body></html>
+
 
