--- a/correction_tutorat_sport.html
+++ b/correction_tutorat_sport.html
@@ -5782,8 +5782,14 @@ window.document.addEventListener("DOMContentLoaded", function (event) {
 });
 </script>
 </div> <!-- /content -->
-
-
+<script>
+  const password = "tutorat12nov"; 
+  const userPassword = prompt("Veuillez entrer le mot de passe pour accéder à cette super page :");
+  if (userPassword !== password) {
+    alert("Mot de passe incorrect !");
+    window.location.href = "https://www.google.com"; // ou une autre page
+  }
+</script>
 
 
 </body></html>
